--- a/style.css
+++ b/style.css
@@ -153,10 +153,11 @@ body{
 }
 /* FOOTER */
 .attribution {
-    font-size: 11px; text-align: center; 
-    position:absolute;
-    width:100%;
-    bottom:0;
+    font-size: 11px; 
+    text-align: center; 
+    position:sticky;
+    bottom: 0;
+    left: 40%;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
@@ -169,6 +170,6 @@ body{
 }
 @media screen and (max-width: 400px){
     .sections{
-        width: 400px;
+        width: 350px;
     }
 }
